--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin:0;
+    background-color: lightblue;
+    background-image: linear-gradient(315deg, #b8b8b8 0%, #b8c6db 100%);
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0; */
 }
 
 .title-section {
@@ -32,4 +39,34 @@ h1{
 
 p {
     font-size: 15px;
+}
+
+.quiz-container {
+    background-color: beige;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 2px;
+    width: 600px;
+    overflow: hidden;
+}
+
+h2 {
+    padding: 1rem;
+    text-align: center;
+    margin: 0;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    font-size:medium;
+    margin: 1 rem, 0;
+}
+
+#submit {
+    background-color: peachpuff;
+    width: 100%;
+    font-size: medium;
 }
