removed some choiceButton logic and instead added logic to submit button with uploadAnswer function

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,8 @@ p {
     background-color: beige;
     border-radius: 10px;
     box-shadow: 0 0 10px 2px;
-    width: 600px;
+    width: 50%;
+    margin: auto;
     overflow: hidden;
 }
 
