removed alerts and replaced with a p tag that reads correct or incorrect(added styling). Created a function in js for correct guesses in an attempt to add to future scoreboard, but does not seem to work

--- a/css/main.css
+++ b/css/main.css
@@ -78,3 +78,16 @@ ul li {
     font-size: small;
     display: inline-block;
 }
+
+#alert-area {
+    height:fit-content;
+    width: 50%;
+    margin: auto;
+}
+#alert {
+    background-color:chartreuse;
+    color:black;
+    width:50%;
+    margin: auto;
+    text-align: center;
+}
